JEDIT 3.2 VERSION HISTORY

* Version 3.2.2

+ New Features

- JHTML syntax highlighting (Will Sargent)
- clipboardHangWorkaround.bsh startup script included. If your JVM
  hangs when jEdit tries to copy or paste, take a look at this script.

+ Enhancements

- Eliminated delay when showing check box menu items for the first time

+ Bug Fixes

- 'Welcome' link in help didn't work
- Fixed another grab key dialog box bug
- Fixed minor slowdown when making changes in the first or last three
  lines of a buffer
- On Windows, javax.swing.filechooser.FileSystemView.isHiddenFile()
  always returns false. So now we attempt calling the File.isHidden()
  method via reflection to find out if a file is hidden or not.
- File permissions were not preserved on MacOS X, because FileVFS did
  not detect if it was running on MacOS X properly
- 'Stop' button in plugin list download progress should now work under
  all Java versions

+ API Changes

- New MiscUtilities.isToolsJarAvailable() method, attempts to load the
  JDK tools.jar, returns true if successful (Dirk Moebius)

* Version 3.2.1

+ New Features

- 'Color Picker' macro added
- Objective-C syntax highlighting (Kris Kopicki)

+ Enhancements

- Updated PV-WAVE edit mode (Ed Stewart)
- Updated 'Write HyperSearch Results' macro (John Gellene)
- Updated jEditLauncher (John Gellene)

+ Bug Fixes

- Clicks in table of contents in help viewer didn't work
- A few actions didn't record a trailing ; when recording a macro
- Fixed another BeanShell performance problem
- Fixed a few minor problems if a plugin threw an exception in its
  start() method (Dirk Moebius)
- MRJ on MacOS 8/9 returns an os.name of "Mac OS", but jEdit was
  checking for "MacOS".
- Fixed minor grab key dialog box bug

+ API Changes

- View.getToolBar() method added
- Status bar change necessary for upcoming Vimulator plugin (Mike Dillon)

* Version 3.2final

+ Enhancements

- Improvements to plugin resource handling, needed by XML plugin 0.4