@@ -255,6 +255,7 @@ Saimon Moore:       - Velocity edit mode
 Tal Davidson:       - First implementation of syntax highlighting engine
 Tom Locke:          - Reverse search
 Will Sargent:       - JHTML edit mode
+                    - RelationalView edit mode
 Wojciech Stryjewski:- Verilog edit mode
 
 In addition to the above people, I would like to thank the plugin
